--- a/styles.css
+++ b/styles.css
@@ -820,3 +820,27 @@
         height: 140px; 
     }
 }
+
+.board__services {
+    height: auto !important;
+    min-height: auto !important;
+    padding: 2rem 0 !important;
+}
+
+@media screen and (max-width: 1319px) {
+    .board__services {
+        height: auto !important;
+    }
+}
+
+@media screen and (max-width: 880px) {
+    .board__services {
+        height: auto !important;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .board__services {
+        height: auto !important;
+    }
+}
